--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,26 @@
 language: python
+dist: xenial
 
 python:
     - "3.4"
     - "3.5"
     - "3.6"
+    - "3.7"
 
 env:
   - DJANGO=1.8
   - DJANGO=1.11
   - DJANGO=2.0
+  - DJANGO=2.1
+
+matrix:
+  exclude:
+    - python: "3.4"
+      env: DJANGO=2.1
+    - python: "3.7"
+      env: DJANGO=1.8
+    - python: "3.7"
+      env: DJANGO=1.11
 
 install:
   - pip install tox tox-travis
