--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,12 @@
 [tox]
-envlist = py{34,35,36}-django{18,111,20}
+envlist = py{34,35,36}-django{18,111,20},py{35,36,37}-django{20,21}
 
 [travis:env]
 DJANGO =
     1.8: django18
     1.11: django111
     2.0: django20
+    2.1: django21
 
 [testenv]
 setenv =
@@ -16,6 +17,7 @@ deps =
     django18: Django>=1.8,<1.9
     django111: Django>=1.11,<1.12
     django20: Django>=2.0,<2.1
+    django21: Django>=2.1,<2.2
     -r{toxinidir}/requirements_test.txt
 
 [testenv:py36-django20]
